--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,18 +2,25 @@
   margin: 25px;
 }
 
-
 img {
   width: 250px;
   height: 250px;
 }
 
+.galleryList {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 25px;
+  gap: 25px;
+  filter: drop-shadow(5px 5px 10px gray)
+}
+
 .galleryItem {
-  display:inline-block;
+  display: inline-block;
   margin: 10px;
   width: 250px;
   height: 350px;
   padding: 25px;
-  border: 25px solid black;
-  /* background-color: lightgray; */
+  border: 20px solid black;
+  background-color: white;
 }
